--- a/FYP - Tinderbox/FYP - Tinderbox.vcxproj.filters
+++ b/FYP - Tinderbox/FYP - Tinderbox.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="ParticleGas.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PerformanceReporter.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="ParticleGas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PerformanceReporter.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
