--- a/FYP - Tinderbox/FYP - Tinderbox.vcxproj
+++ b/FYP - Tinderbox/FYP - Tinderbox.vcxproj
@@ -27,6 +27,7 @@
     <ClCompile Include="ParticleSimulation.cpp" />
     <ClCompile Include="ParticleSolid.cpp" />
     <ClCompile Include="PerformanceReporter.cpp" />
+    <ClCompile Include="SimulationSerializer.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.h" />
@@ -36,6 +37,7 @@
     <ClInclude Include="ParticleSimulation.h" />
     <ClInclude Include="ParticleSolid.h" />
     <ClInclude Include="PerformanceReporter.h" />
+    <ClInclude Include="SimulationSerializer.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
