--- a/FYP - Tinderbox/FYP - Tinderbox.vcxproj.filters
+++ b/FYP - Tinderbox/FYP - Tinderbox.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="PerformanceReporter.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SimulationSerializer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="PerformanceReporter.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SimulationSerializer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
