Initial toolbar pass
- Introduced UIButton class
- Set up toolbar
- Allowed threading to be toggleable. This will soon be a pre-processor define.
- In-application cursor added

--- a/FYP - Tinderbox/FYP - Tinderbox.vcxproj
+++ b/FYP - Tinderbox/FYP - Tinderbox.vcxproj
@@ -28,6 +28,7 @@
     <ClCompile Include="ParticleSolid.cpp" />
     <ClCompile Include="PerformanceReporter.cpp" />
     <ClCompile Include="SimulationSerializer.cpp" />
+    <ClCompile Include="UIButton.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Particle.h" />
@@ -38,6 +39,7 @@
     <ClInclude Include="ParticleSolid.h" />
     <ClInclude Include="PerformanceReporter.h" />
     <ClInclude Include="SimulationSerializer.h" />
+    <ClInclude Include="UIButton.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
